tests/tooling/fixtures/native/execution/positive/for_sum.objc3
module ForSumExec;

fn main() -> i32 {
  let sum = 0;
  for (let i = 0; i < 5; i = i + 1) {
    sum = sum + i;
  }
  return sum;
}
