tests/tooling/fixtures/native/execution/negative/parameter_bool_generic_suffix_unsupported.objc3
module ParameterBoolGenericSuffixUnsupported;

fn choose(flag: bool<NSObject>) -> i32 {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  return 0;
}
